Improved Wikipedia searches; fixed localstorage bug.

--- a/html/index.html
+++ b/html/index.html
@@ -863,7 +863,24 @@
               >
                 Disambiguation
               </span>
-              <div class="search-resultsUL pl-0 mt-4"></div>
+              <div class="search-resultsUL pl-0 mt-4">
+                <div class="wikipedia-bio flex flex-col items-start">
+                  <div class="wikipedia-bio-title text-xl font-bold"></div>
+                  <div
+                    class="wikipedia-bio-description pt-2 text-gray-500 italic"
+                  ></div>
+                  <div class="wikipedia-bio-image">
+                    <img src="" class="pt-4 rounded-xl w-48" />
+                  </div>
+                  <p class="wikipedia-bio-extract pt-4"></p>
+                  <button
+                    id="wikipedia-show-full"
+                    class="pt-4 text-blue-600 underline"
+                  >
+                    View full article on Wikipedia
+                  </button>
+                </div>
+              </div>
             </div>
             <!-- Artist Right Subcontainer Four -->
             <div
@@ -878,12 +895,11 @@
                 Back
               </span>
               <ul class="search-resultsUL pl-0 mt-4">
-                <li class="mb-4">
+                <li class="mb-2">
                   <span
                     class="search-link text-blue-600 underline cursor-pointer"
                   >
                   </span>
-                  <span></span>
                 </li>
               </ul>
             </div>
