Client remembers Sonos group; search reset button added; more bugs fixed

--- a/html/index.html
+++ b/html/index.html
@@ -440,6 +440,13 @@
           >
             <span class="m-auto">Back</span>
           </span>
+          <!-- Reset Button -->
+          <span
+            id="search-reset"
+            class="search-button W-button flex flex-grow-0 lg:h-9"
+          >
+            <span class="m-auto">Reset</span>
+          </span>
           <!-- Progress Indicator -->
           <img
             id="search-progress"
@@ -688,9 +695,9 @@
                   >
                     <span
                       id="search-artist-album-details-button-spotify"
-                      class="W-button w-[6em] lg:w-[7em] ml-0 mt-1 lg:mt-1.5 p-0 lg:p-1 text-center flex items-center justify-center whitespace-nowrap"
+                      class="W-button w-[6em] lg:w-[7em] ml-0 mt-1 lg:mt-1.5 p-0 lg:p-1 text-center flex items-center justify-center whitespace-nowrap select-none"
                     >
-                      <span class="mr-1">View on</span>
+                      <span class="mr-1 select-none">View on</span>
                       <img
                         src="icons/spotify_logo_round_black.svg"
                         alt="Spotify logo"
@@ -699,27 +706,27 @@
                     </span>
                     <span
                       id="search-artist-album-details-button-play"
-                      class="W-button w-[6em] lg:w-[7em] ml-0 mt-1 lg:mt-1.5 p-0 lg:p-1 text-center"
+                      class="W-button w-[6em] lg:w-[7em] ml-0 mt-1 lg:mt-1.5 p-0 lg:p-1 text-center select-none"
                       >Play</span
                     >
                     <span
                       id="search-artist-album-details-button-add"
-                      class="W-button w-[6em] lg:w-[7em] ml-0 mt-1 lg:mt-1.5 p-0 lg:p-1 text-center"
+                      class="W-button w-[6em] lg:w-[7em] ml-0 mt-1 lg:mt-1.5 p-0 lg:p-1 text-center select-none"
                       >Add</span
                     >
                     <span
                       id="search-artist-album-details-button-replace"
-                      class="W-button w-[6em] lg:w-[7em] ml-0 mt-1 lg:mt-1.5 p-0 lg:p-1 text-center"
+                      class="W-button w-[6em] lg:w-[7em] ml-0 mt-1 lg:mt-1.5 p-0 lg:p-1 text-center select-none"
                       >Replace</span
                     >
                     <span
                       id="search-artist-album-details-button-edit"
-                      class="W-button w-[6em] lg:w-[7em] ml-0 mt-1 lg:mt-1.5 p-0 lg:p-1 text-center"
+                      class="W-button w-[6em] lg:w-[7em] ml-0 mt-1 lg:mt-1.5 p-0 lg:p-1 text-center select-none"
                       >Edit / Select</span
                     >
                     <span
                       id="search-artist-album-details-button-more"
-                      class="W-button w-[6em] lg:w-[7em] ml-0 mt-1 lg:mt-1.5 p-0 lg:p-1 text-center"
+                      class="W-button w-[6em] lg:w-[7em] ml-0 mt-1 lg:mt-1.5 p-0 lg:p-1 text-center select-none"
                       >More</span
                     >
                   </span>
